--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-lighthouse
-bs4
-requests
+beautifulsoup4==4.12.3
+html_chunking==0.0.4
+openai==1.51.2
+pandas==2.2.3
+python-dotenv==1.0.1
+Requests==2.32.3
+speedtest==0.0.1
+tenacity==8.5.0
+tiktoken==0.7.0
+warcio==1.7.4
+zss==1.2.0
